@@ -302,3 +302,5 @@ highlight a programming language but a patch file.
 
 `Generic.Traceback`
     Marks the token value as a part of an error traceback.
+
+.. _filters: filters.txt
